--- a/homework-03/index.html
+++ b/homework-03/index.html
@@ -3,26 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Journal Page</title>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <link rel="stylesheet" href="styles/journal.css">
 </head>
 <body>
 
 <div class="wrapper">
 
-    <div class="header">
-        <div class="headerFlexContainer">
-            <div class="menuFlexItem"><a href="#" class="current">Lifestyle</a></div>
-            <div class="menuFlexItem"><a href="#" class="notCurrent">Photography</a></div>
-            <div class="menuFlexItem"><a href="#" class="notCurrent">Music</a></div>
-            <div class="menuFlexItem"><a href="#" class="notCurrent">Travel</a></div>
-        </div>
-    </div>
+    <header class="header">
+        <nav class="headerFlexContainer">
+            <ul class = "memu">
+            <li class="menuFlexItem"><a href="#" class="current">Lifestyle</a></li>
+            <li class="menuFlexItem"><a href="#" class="notCurrent">Photography</a></li>
+            <li class="menuFlexItem"><a href="#" class="notCurrent">Music</a></li>
+            <li class="menuFlexItem"><a href="#" class="notCurrent">Travel</a></li>
+            </ul>
+        </nav>
+    </header>
 
 <div class="AllArticlesConteiner">
 <div class="ArticleItem">
     <div class="ArticleContiner">
         <img class="ArticleImage" src="img/Fest.png" alt="Fest">
-        <h4 class="ArticleTitleGrey">Lifestyle</h4>
+        <h3 class="ArticleTitleGrey">Lifestyle</h3>
         <h2 class="ArticleTitle">More than just a musical festival</h2>
         <p class="ArticleText">Lorem Ipsum has been the industry's standard dummy text ever since
             the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -33,7 +36,7 @@
 <div class="ArticleItem">
     <div class="ArticleContiner">
         <img class="ArticleImage" src="img/Coffee.png" alt="Coffee">
-        <h4 class="ArticleTitleGrey">Lifestyle</h4>
+        <h3 class="ArticleTitleGrey">Lifestyle</h3>
         <h2 class="ArticleTitle">Life tastes better with coffee</h2>
         <p class="ArticleText">Lorem Ipsum has been the industry's standard dummy text ever since
             the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -44,7 +47,7 @@
 <div class="ArticleItem">
     <div class="ArticleContiner">
         <img class="ArticleImage" src="img/Bridge.png" alt="Bridge">
-        <h4 class="ArticleTitleGrey">Photography</h4>
+        <h3 class="ArticleTitleGrey">Photography</h3>
         <h2 class="ArticleTitle">American dream</h2>
         <p class="ArticleText">Lorem Ipsum has been the industry's standard dummy text ever since
         the 1500s, when an
@@ -56,7 +59,7 @@
     <div class="ArticleItem">
     <div class="ArticleContiner">
         <img class="ArticleImage" src="img/Man.png" alt="Guy">
-        <h4 class="ArticleTitleGrey">Photography</h4>
+        <h3 class="ArticleTitleGrey">Photography</h3>
         <h2 class="ArticleTitle">A day exploring the Alps</h2>
         <p class="ArticleText">Lorem Ipsum has been the industry's standard dummy text ever since the
         1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -68,7 +71,7 @@
     <div class="ArticleItem">
     <div class="ArticleContiner">
         <img class="ArticleImage" src="img/Hat.png" alt="SummerHat">
-        <h4 class="ArticleTitleGrey">Lifestyle</h4>
+        <h3 class="ArticleTitleGrey">Lifestyle</h3>
         <h2 class="ArticleTitle">Top 10 songs to running</h2>
         <p class="ArticleText">Lorem Ipsum has been the industry's standard dummy text ever since the
         1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -79,7 +82,7 @@
     <div class="ArticleItem">
     <div class="ArticleContiner">
         <img class="ArticleImage" src="img/Road.png" alt="Road">
-        <h4 class="ArticleTitleGrey">Lifestyle</h4>
+        <h3 class="ArticleTitleGrey">Lifestyle</h3>
         <h2 class="ArticleTitle">Cold winter days</h2>
         <p class="ArticleText">Lorem Ipsum has been the industry's standard dummy text ever
         since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
