--- a/homework-04/index.html
+++ b/homework-04/index.html
@@ -9,16 +9,16 @@
 <body>
 <div class="wrapper">
     <header>
-        <div class="header">
-            <p class = "logo clearfix"><a href = "#">mart </a></p>
+        <div class="header clearfix">
+            <p class = "logo"><a href = "#">mart </a></p>
             <nav>
-                <ul class="menu">
-                    <li class="clearfix"><a href="#">home</a></li>
-                    <li class="clearfix"><a href="#">about us</a></li>
-                    <li class="clearfix"><a href="#">page</a></li>
-                    <li class="clearfix"><a href="#">shop</a></li>
-                    <li class="clearfix"><a href="#">blog</a></li>
-                    <li class="clearfix"><a href="#">contact us</a></li>
+                <ul class="menu clearfix">
+                    <li class="menuItem"><a href="#">home</a></li>
+                    <li class="menuItem"><a href="#">about us</a></li>
+                    <li class="menuItem"><a href="#">page</a></li>
+                    <li class="menuItem"><a href="#">shop</a></li>
+                    <li class="menuItem"><a href="#">blog</a></li>
+                    <li class="menuItem"><a href="#">contact us</a></li>
                 </ul>
             </nav>
         </div>
@@ -28,68 +28,94 @@
             <div class="contnetHeaders">
             <h2>featured products</h2>
             </div>
+            <ul class="productsContent">
+             <li class="storeItem">
             <div class="productItem">
                 <img class="imageItem" src="img/Sandal.jpg" alt="Sandal">
                 <p class="productsName">blue tshirt</p>
                 <p class="price">$26</p>
             </div>
+            </li>
+                <li class="storeItem">
             <div class="productItem">
                 <img class="imageItem"  src="img/Bolt.jpg" alt="Bolt">
                 <p class="productsName clearfix">woman shirt</p>
                 <p class="price">$31</p>
             </div>
+                </li>
+                <li class="storeItem">
             <div class="productItem">
                 <img class="imageItem" src="img/Hat.jpg" alt="Hat">
                 <p class="productsName clearfix">yellow tshirt</p>
                 <p class="price">$21</p>
             </div>
+                </li>
+                <li class="storeItem">
             <div class="productItem">
                 <img class="imageItem" src="img/Bag.jpg" alt="Blue woman bag">
                 <p class="productsName clearfix">cool lingerie</p>
                 <p class="price">$56</p>
             </div>
+                </li>
+                <li class="storeItem">
             <div class="productItem">
                 <img class="imageItem" src="img/BlackBag.jpg" alt="Black woman bag">
                 <p class="productsName clearfix">blue tshirt</p>
                 <p class="price">$26</p>
             </div>
+                </li>
+                <li class="storeItem">
             <div class="productItem">
                 <img class="imageItem" src="img/BlackBolt.jpg" alt="Black Bolt">
                 <p class="productsName clearfix">woman shirt</p>
                 <p class="price">$31</p>
             </div>
+                </li>
+                <li class="storeItem">
             <div class="productItem">
                 <img class="imageItem" src="img/ManShoes.jpg" alt="Man Shoes">
                 <p class="productsName clearfix">yellow tshirt</p>
                 <p class="price">$21</p>
             </div>
+                </li>
+                <li class="storeItem">
             <div class="productItem">
                 <img class="imageItem" src="img/Glas.jpg" alt="Glasses">
                 <p class="productsName clearfix">cool lingerie</p>
                 <p class="price">$56</p>
             </div>
+                </li>
+            </ul>
         </div>
         <div class="botContent">
             <h2 class="news">lasted news</h2>
             <div class="botArticleContainer">
-                <article class="article clearfix">
+                <ul class="article clearfix">
+                    <li class="botArticle">
+                        <div class="botItem">
                 <img class="botImage" src="img/Navigator.jpg" alt="Navigator">
                 <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, possimus?</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere ipsum iusto laboriosam </p>
                     <p class="button">Read More</p>
-            </article>
-                <article class="article clearfix">
+                        </div>
+                    </li>
+                <li class="botArticle">
+                    <div class="botItem">
                     <img class="botImage" src="img/Girls.jpg" alt="Girls">
                     <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, possimus?</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere ipsum iusto laboriosam </p>
                     <p class="button">Read More</p>
-                </article>
-                <article class="article clearfix">
+                    </div>
+                </li>
+                <li class="botArticle">
+                    <div class="botItem">
                     <img class="botImage" src="img/Bus.jpg" alt="Bus">
                     <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, possimus?</h4>
-                    <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere ipsum iusto</br> laboriosam </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere ipsum iusto laboriosam </p>
                     <p class="button">Read More</p>
-                </article>
+                    </div>
+                </li>
+                </ul>
             </div>
 
         </div>
