--- a/homework-04/index.html
+++ b/homework-04/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Internet Store</title>
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto:300,400,900" rel="stylesheet">
     <link rel="stylesheet" href="styles/storeCss.css">
 </head>
 <body>
-<div class="wrapper">
+<div class="wrapper clearfix">
     <header>
         <div class="header clearfix">
             <p class = "logo"><a href = "#">mart </a></p>
             <nav>
-                <ul class="menu clearfix">
+                <ul class="menu">
                     <li class="menuItem"><a href="#">home</a></li>
                     <li class="menuItem"><a href="#">about us</a></li>
                     <li class="menuItem"><a href="#">page</a></li>
@@ -28,7 +28,7 @@
             <div class="contnetHeaders">
             <h2>featured products</h2>
             </div>
-            <ul class="productsContent">
+            <ul class="productsContent clearfix">
              <li class="storeItem">
             <div class="productItem">
                 <img class="imageItem" src="img/Sandal.jpg" alt="Sandal">
@@ -95,7 +95,7 @@
                         <div class="botItem">
                 <img class="botImage" src="img/Navigator.jpg" alt="Navigator">
                 <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, possimus?</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere ipsum iusto laboriosam </p>
+                <p class="textBot">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere ipsum iusto laboriosam </p>
                     <p class="button">Read More</p>
                         </div>
                     </li>
@@ -103,7 +103,7 @@
                     <div class="botItem">
                     <img class="botImage" src="img/Girls.jpg" alt="Girls">
                     <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, possimus?</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere ipsum iusto laboriosam </p>
+                    <p class="textBot">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere ipsum iusto laboriosam </p>
                     <p class="button">Read More</p>
                     </div>
                 </li>
@@ -111,7 +111,7 @@
                     <div class="botItem">
                     <img class="botImage" src="img/Bus.jpg" alt="Bus">
                     <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, possimus?</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere ipsum iusto laboriosam </p>
+                    <p class="textBot">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere ipsum iusto laboriosam </p>
                     <p class="button">Read More</p>
                     </div>
                 </li>
