--- a/homework-03/index.html
+++ b/homework-03/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Journal Page</title>
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto:300,400,900" rel="stylesheet">
     <link rel="stylesheet" href="styles/journal.css">
 </head>
 <body>
