--- a/homework-05/index.html
+++ b/homework-05/index.html
@@ -3,67 +3,120 @@
 <head>
     <meta charset="UTF-8">
     <title>Site Store</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto:300,400,900" rel="stylesheet">
     <link rel="stylesheet" href="styles/storeInet.css">
 </head>
 <body>
-    <header>
-        <div class="header clearfix">
-            <p class = "logo"><a href = "#">mart </a></p>
-            <nav>
-                <ul class="menu">
-                    <li class="menuItem"><a href="#">home</a></li>
-                    <li class="menuItem"><a href="#">about us</a></li>
-                    <li class="menuItem"><a href="#">page</a></li>
-                    <li class="menuItem"><a href="#">shop</a></li>
-                    <li class="menuItem"><a href="#">blog</a></li>
-                    <li class="menuItem"><a href="#">contact us</a></li>
-                </ul>
-            </nav>
+<div class="wrapperHeader">
+    <div class="containerHeader">
+        <header>
+            <div class="header clearfix">
+                <p class="logo"><a href="#">mart </a></p>
+                <nav>
+                    <ul class="menu">
+                        <li class="menuItem"><a href="#">home</a></li>
+                        <li class="menuItem"><a href="#">about us</a></li>
+                        <li class="menuItem"><a href="#">page</a></li>
+                        <li class="menuItem"><a href="#">shop</a></li>
+                        <li class="menuItem"><a href="#">blog</a></li>
+                        <li class="menuItem"><a href="#">contact us</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+    </div>
+</div>
+<main class="contextSite">
+    <div class="wrapperBanner">
+        <div class= "containerBan">
+            <span class="buttonLeft"></span>
+            <div class="containerBannerText">
+                 <p class="bannerLink">AFFORDABLE PARIS TOURS</p>
+                <span class="bannerText">CITY TOURS / TOUR TICKETS / TOUR GUIDES</span>
+            </div>
+            <span class="buttonRight"></span>
         </div>
-    </header>
-    <main class="contextSite">
-        <article class="banner">
-        <img class="sliderPic" src="img/slide4.png" alt="slider">
-    </article>
-    <article class="clothes">
+
+
+    <div class="wrapperMain">
+        <div class="containerMain">
+        <article class="clothes">
         <h2>new collection</h2>
     </article>
-        <section class="products">
-            <ul class="Item clearfix">
-                <li class="productItem">
-                    <img class="imageItem" src="img/manBlue.png" alt="man" width="255" height="281">
-                    <p class="productsName">blue tshirt</p>
-                    <p class="price">$26</p>
-                </li>
-                <li class="productItem">
-                    <img class="imageItem" src="img/womanPink.png" alt="woman" width="255" height="281">
-                    <p class="productsName">woman shirt</p>
-                    <p class="price">$31</p>
-                </li>
-                <li class="productItem">
-                    <img class="imageItem" src="img/manYellow.png" alt="man" width="255" height="281">
-                    <p class="productsName">yellow shirt</p>
-                    <p class="price">$21</p>
-                </li>
-                <li class="productItem">
-                    <img class="imageItem" src="img/womanGrey.png" alt="woman" width="255" height="281">
-                    <p class="productsName">cool lingerie</p>
-                    <p class="price">$56</p>
-                </li>
-            </ul>
-            <div class="overlay">
-                <p>Lorem ipsum dolor sit amet.</p>
+    <section class="products">
+        <ul class="Item clearfix">
+            <li class="productItem">
+                <div class="overlayContainer">
+                    <div class="overlayBackground"></div>
+                    <p class="overlayContent clearfix">
+                        <span class="iconBord"> &#9825; </span>
+                        <span class="iconBord"> &#10542;</span>
+                        <span class="iconBord"> &#9991;</span>
+                        <span class="iconBig">&#9878 add to cart</span>
 
-            </div>
+                    </p>
+                </div>
+                <img class="imageItem" src="img/manBlue.png" alt="man" width="255" height="281">
+                <p class="productsName">blue tshirt</p>
+                <p class="price">$26</p>
+            </li>
+            <li class="productItem">
+                <div class="overlayContainer">
+                    <div class="overlayBackground"></div>
+                    <p class="overlayContent clearfix">
+                        <span class="iconBord"> &#9825; </span>
+                        <span class="iconBord"> &#10542;</span>
+                        <span class="iconBord"> &#9991;</span>
+                        <span class="iconBig">&#9878 add to cart</span>
+
+                    </p>
+                </div>
+                <img class="imageItem" src="img/womanPink.png" alt="woman" width="255" height="281">
+                <p class="productsName">woman shirt</p>
+                <p class="price">$31</p>
+            </li>
+            <li class="productItem">
+                <div class="overlayContainer">
+                    <div class="overlayBackground"></div>
+                    <p class="overlayContent clearfix">
+                        <span class="iconBord"> &#9825; </span>
+                        <span class="iconBord"> &#10542;</span>
+                        <span class="iconBord"> &#9991;</span>
+                        <span class="iconBig">&#9878 add to cart</span>
+
+                    </p>
+                </div>
+                <img class="imageItem" src="img/manYellow.png" alt="man" width="255" height="281">
+                <p class="productsName">yellow shirt</p>
+                <p class="price">$21</p>
+            </li>
+            <li class="productItem">
+                <div class="overlayContainer">
+                    <div class="overlayBackground"></div>
+                    <p class="overlayContent clearfix">
+                        <span class="iconBord"> &#9825; </span>
+                        <span class="iconBord"> &#10542;</span>
+                        <span class="iconBord"> &#9991;</span>
+                        <span class="iconBig">&#9878 add to cart</span>
+
+                    </p>
+                </div>
+
+                <img class="imageItem" src="img/womanGrey.png" alt="woman" width="255" height="281">
+                <p class="productsName">cool lingerie</p>
+                <p class="price">$56</p>
+            </li>
+        </ul>
 
 
-        </section>
-    </main>
-    <footer class="botContent">
+    </section>
+    </div>
+    </div>
+</main>
+<footer class="mainFooterContainer">
         <p class="contactInformation">
-            All Rights Reserved © Dokan | Designed ThemenGraph
+            All Rights Reserved © Dokan | Designed <span class="nameDesigner">ThemenGraph</span>
         </p>
-    </footer>
-
+</footer>
 </body>
 </html>
