--- a/homework-06/index.html
+++ b/homework-06/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Team Title</title>
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:300,400,500,700|Roboto:300,400,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:300,400,500,700|Roboto:300,400,500,700"
+          rel="stylesheet">
     <style>
         @import "style/mainCss.css";
     </style>
@@ -14,7 +15,9 @@
         <span class="logo">MoGo</span>
         <nav>
             <ul class="menu">
-                <li class="menu-Item"><a class="menu-Item-Link" href="#">about</a></li>
+                <li class="menu-Item">
+                    <div class="menu-item-wrap"><a class="menu-Item-Link" href="#">about</a></div>
+                </li>
                 <li class="menu-Item"><a class="menu-Item-Link" href="#">service</a></li>
                 <li class="menu-Item"><a class="menu-Item-Link" href="#">work</a></li>
                 <li class="menu-Item"><a class="menu-Item-Link" href="#">blog</a></li>
@@ -94,16 +97,20 @@
                         <div class="team-container-overlay-background"></div>
                         <div class="team-container-overlay-content">
                             <div class="backgroundOverlayIcon">
-                                <img class="overlayIcons" src="img/icons/facebook.png" width="13" height="26">
+                                <a href="#"><img class="overlayIcons" src="img/icons/facebook.png" width="13"
+                                                 height="26"></a>
                             </div>
                             <div class="backgroundOverlayIcon">
-                                <img class="overlayIcons" src="img/icons/twitter.png" width="26" height="22">
+                                <a href="#"><img class="overlayIcons" src="img/icons/twitter.png" width="26"
+                                                 height="22"></a>
                             </div>
                             <div class="backgroundOverlayIcon">
-                                <img class="overlayIcons" src="img/icons/pinterest.png" width="21" height="26">
+                                <a href="#"><img class="overlayIcons" src="img/icons/pinterest.png" width="21"
+                                                 height="26"></a>
                             </div>
                             <div class="backgroundOverlayIcon">
-                                <img class="overlayIcons" src="img/icons/instagram.png" width="26" height="26">
+                                <a href="#"><img class="overlayIcons" src="img/icons/instagram.png" width="26"
+                                                 height="26"></a>
                             </div>
                         </div>
                         <div class="team-container-overlay-background-back"></div>
@@ -120,16 +127,20 @@
                         <div class="team-container-overlay-background"></div>
                         <div class="team-container-overlay-content">
                             <div class="backgroundOverlayIcon">
-                                <img class="overlayIcons" src="img/icons/facebook.png" width="13" height="26">
+                                <a href="#"><img class="overlayIcons" src="img/icons/facebook.png" width="13"
+                                                 height="26"></a>
                             </div>
                             <div class="backgroundOverlayIcon">
-                                <img class="overlayIcons" src="img/icons/twitter.png" width="26" height="22">
+                                <a href="#"><img class="overlayIcons" src="img/icons/twitter.png" width="26"
+                                                 height="22"></a>
                             </div>
                             <div class="backgroundOverlayIcon">
-                                <img class="overlayIcons" src="img/icons/pinterest.png" width="21" height="26">
+                                <a href="#"><img class="overlayIcons" src="img/icons/pinterest.png" width="21"
+                                                 height="26"></a>
                             </div>
                             <div class="backgroundOverlayIcon">
-                                <img class="overlayIcons" src="img/icons/instagram.png" width="26" height="26">
+                                <a href="#"><img class="overlayIcons" src="img/icons/instagram.png" width="26"
+                                                 height="26"></a>
                             </div>
                         </div>
                         <div class="team-container-overlay-background-back"></div>
@@ -146,16 +157,20 @@
                         <div class="team-container-overlay-background"></div>
                         <div class="team-container-overlay-content">
                             <div class="backgroundOverlayIcon">
-                                <img class="overlayIcons" src="img/icons/facebook.png" width="13" height="26">
+                                <a href="#"><img class="overlayIcons" src="img/icons/facebook.png" width="13"
+                                                 height="26"></a>
                             </div>
                             <div class="backgroundOverlayIcon">
-                                <img class="overlayIcons" src="img/icons/twitter.png" width="26" height="22">
+                                <a href="#"><img class="overlayIcons" src="img/icons/twitter.png" width="26"
+                                                 height="22"></a>
                             </div>
                             <div class="backgroundOverlayIcon">
-                                <img class="overlayIcons" src="img/icons/pinterest.png" width="21" height="26">
+                                <a href="#"><img class="overlayIcons" src="img/icons/pinterest.png" width="21"
+                                                 height="26"></a>
                             </div>
                             <div class="backgroundOverlayIcon">
-                                <img class="overlayIcons" src="img/icons/instagram.png" width="26" height="26">
+                                <a href="#"><img class="overlayIcons" src="img/icons/instagram.png" width="26"
+                                                 height="26"></a>
                             </div>
                         </div>
                         <div class="team-container-overlay-background-back"></div>
@@ -175,7 +190,7 @@
         <span class="footer-span">© 2016 MoGo free PSD template by <span class="footer-green">Laaqiq</span></span>
         <div class="footer-email">
             <p><input class="Mail-input" placeholder="   Your Email..."></p>
-        <button class="btn">subscribe</button>
+            <button class="btn">subscribe</button>
         </div>
     </footer>
 </div>
