--- a/homework-07/index.html
+++ b/homework-07/index.html
@@ -5,7 +5,7 @@
     <title>Contact Page</title>
     <link href="https://fonts.googleapis.com/css?family=Rouge+Script" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400i" rel="stylesheet">
-    <link rel="stylesheet" href="styles/Main.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
 <div class="wrapper">
@@ -60,30 +60,33 @@
             </section>
         </main>
     </div>
-    <div class="wrapper-footer">
-        <div class="container-footer">
-            <section class="contact-us">
-                <div class="title-container-footer">
-                    <h2 class="title title-footer">contact us</h2>
-                    <p class="subtitle">Proin iaculis purus consequat sem cure.</p>
-                </div>
-                <div class="forms-list">
-                    <form class="contact-form" action="#">
-                        <div class="flex-footer-container">
-                            <div class="flex-direction">
+</div>
+<div class="wrapper-footer">
+    <div class="container-footer">
+        <section class="contact-us">
+            <div class="title-container-footer">
+                <h2 class="title title-footer">contact us</h2>
+                <p class="subtitle">Proin iaculis purus consequat sem cure.</p>
+            </div>
+            <div class="forms-list">
+                <form class="contact-form" action="#">
+                    <div class="flex-footer-container">
+                        <div class="flex-direction">
                             <div class="flex-fields">
-                        <input class="field" type="text" name="name" placeholder="Your name*" required autocomplete="off">
-                        <input class="field" type="email" name="e-mail" placeholder="Your e-mail*" required autocomplete="off">
-                        <input class="field" type="text" name="subject" placeholder="Subject" >
+                                <input class="field" type="text" name="name" placeholder="Your name*" required
+                                       autocomplete="off">
+                                <input class="field" type="email" name="e-mail" placeholder="Your e-mail*" required
+                                       autocomplete="off">
+                                <input class="field" type="text" name="subject" placeholder="Subject">
                             </div>
-                                <textarea class="textarea" name="message" placeholder="Your message*" required></textarea>
-                            </div>
-                        <button class="btn" formmethod="post" formaction="#" type="submit">Send message</button>
+                            <textarea class="textarea" name="message" placeholder="Your message*"
+                                      required></textarea>
                         </div>
-                    </form>
-                </div>
-            </section>
-        </div>
+                        <button class="btn" formmethod="post" formaction="#" type="submit">Send message</button>
+                    </div>
+                </form>
+            </div>
+        </section>
     </div>
 </div>
 </body>
