--- a/homework-09/index.html
+++ b/homework-09/index.html
@@ -2,11 +2,133 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Human Page</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/bootstrap.min.css"
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-12">
+            <header class="hearer">
+                <div class="row justify-content-center">
+                    <div class="col-xs-12 col-sm-6 col-lg-3 order-xs-0">
+                        <span class="logo">URLAUBSGLÜCK</span>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6 col-lg-3 order-xs-1">
+                            <nav>
+                                <ul class="menu">
+                                    <li class="menu-Item"><a class="menu-Item-Link" href="#">Log in</a></li>
+                                    <li class="menu-Item"><a class="menu-Item-Link" href="#">Sign up</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-xs-12 col-sm-6 col-lg-3">
+                        <div class="row">
+                            <div class="col-12">
+                                <h1 class="site-title">Share your<br>
+                                    holiday dreams</h1>
+                                <h3 class="site-subtitle">And find the perfect partner to fullfill it</h3>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-6 col-lg-3">
+                                    <button class="btn" type="button" formmethod="get" formaction="#">Find your holiday
+                                        partner
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </header>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="container-team">
+            <div class="row justify-content-center">
+                <section class="team">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6 col-lg-6">
+                            <h2 class="team-title">Meet a partner for your best holiday</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6 col-lg-6">
+                            <div class="row justify-content-center">
+                                <div class="col-12 col-sm-6 col-lg-3">
+                                    <div class="team-item">
+                                        <div class="team-image-container">
+                                            <img class="person-photo" src="img/man-glasses.png">
+                                            <img class="person-logo" src="img/tv.png">
+                                        </div>
+                                        <span class="person-title">Bradley Hunter</span>
+                                        <p class="person-text">Based in Chicago. I love playing tennis and loud
+                                            music.</p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xs-12 col-sm-6 col-lg-3">
+                                        <div class="team-item">
+                                            <div class="team-image-container">
+                                                <img class="person-photo" src="img/Joli.png">
+                                                <img class="person-logo" src="img/tea.png">
+                                            </div>
+                                            <span class="person-title">Heather Walker</span>
+                                            <p class="person-text">I'm a happy person that loves cats and climbing
+                                                on
+                                                mountains.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xs-12 col-md-6 col-lg-3">
+                                        <div class="team-item">
+                                            <div class="team-image-container">
+                                                <img class="person-photo" src="img/man.png">
+                                                <img class="person-logo" src="img/chemic.png">
+                                            </div>
+                                            <span class="person-title">Lucas Marsha</span>
+                                            <p class="person-text">I get my inspiration from nature and objects
+                                                around
+                                                me. I have a passion to colours, typography and skateboards.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xs-12 col-sm-6 col-lg-3">
+                                        <div class="team-item">
+                                            <div class="team-image-container">
+                                                <img class="person-photo" src="img/woman-glasses.png">
+                                                <img class="person-logo" src="img/telega.png">
+                                            </div>
+                                            <span class="person-title">Bradley Hunter</span>
+                                            <p class="person-text">Based in Chicago. I love playing tennis and loud
+                                                music.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-4 col-sm-2 col-lg-3">
+                            <button class="btn-team" type="button" formmethod="get" formaction="#">See other partners
+                            </button>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
