--- a/homework-09/index.html
+++ b/homework-09/index.html
@@ -11,124 +11,94 @@
 </head>
 <body>
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-xs-12">
-            <header class="hearer">
-                <div class="row justify-content-center">
-                    <div class="col-xs-12 col-sm-6 col-lg-3 order-xs-0">
-                        <span class="logo">URLAUBSGLÜCK</span>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6 col-lg-3 order-xs-1">
-                            <nav>
-                                <ul class="menu">
-                                    <li class="menu-Item"><a class="menu-Item-Link" href="#">Log in</a></li>
-                                    <li class="menu-Item"><a class="menu-Item-Link" href="#">Sign up</a></li>
-                                </ul>
-                            </nav>
-                        </div>
-                    </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-xs-12 col-sm-6 col-lg-3">
-                        <div class="row">
-                            <div class="col-12">
-                                <h1 class="site-title">Share your<br>
-                                    holiday dreams</h1>
-                                <h3 class="site-subtitle">And find the perfect partner to fullfill it</h3>
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-6 col-lg-3">
-                                    <button class="btn" type="button" formmethod="get" formaction="#">Find your holiday
-                                        partner
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </header>
+    <header class="header d-md-flex flex-md-wrap">
+        <div class="row order-1 order-sm-1 col-12 col-sm-11 col-md-11 col-lg-11 justify-content-sm-between">
+            <span class="logo order-2 order-sm-1 order-md-1 col-sm-3">URLAUBSGLÜCK</span>
+            <div class="col-12 col-sm-4 col-lg-3 order-1  order-sm-2 order-lg-2">
+                <nav>
+                    <ul class="menu">
+                        <li class="menu-Item"><a class="menu-Item-Link" href="#">Log in</a></li>
+                        <li class="menu-Item"><a class="menu-Item-Link signup" href="#">Sign up</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-    </div>
-</div>
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="container-team">
-            <div class="row justify-content-center">
-                <section class="team">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6 col-lg-6">
-                            <h2 class="team-title">Meet a partner for your best holiday</h2>
-                        </div>
+        <div class="row justify-content-center order-sm-2 middle-container justify-content-lg-center">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 site-title-container">
+                        <h1 class="site-title">Share your<br>
+                            holiday dreams</h1>
+                        <h3 class="site-subtitle">And find the perfect partner to fullfill it</h3>
                     </div>
                     <div class="row">
-                        <div class="col-xs-12 col-sm-6 col-lg-6">
-                            <div class="row justify-content-center">
-                                <div class="col-12 col-sm-6 col-lg-3">
-                                    <div class="team-item">
-                                        <div class="team-image-container">
-                                            <img class="person-photo" src="img/man-glasses.png">
-                                            <img class="person-logo" src="img/tv.png">
-                                        </div>
-                                        <span class="person-title">Bradley Hunter</span>
-                                        <p class="person-text">Based in Chicago. I love playing tennis and loud
-                                            music.</p>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-xs-12 col-sm-6 col-lg-3">
-                                        <div class="team-item">
-                                            <div class="team-image-container">
-                                                <img class="person-photo" src="img/Joli.png">
-                                                <img class="person-logo" src="img/tea.png">
-                                            </div>
-                                            <span class="person-title">Heather Walker</span>
-                                            <p class="person-text">I'm a happy person that loves cats and climbing
-                                                on
-                                                mountains.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-xs-12 col-md-6 col-lg-3">
-                                        <div class="team-item">
-                                            <div class="team-image-container">
-                                                <img class="person-photo" src="img/man.png">
-                                                <img class="person-logo" src="img/chemic.png">
-                                            </div>
-                                            <span class="person-title">Lucas Marsha</span>
-                                            <p class="person-text">I get my inspiration from nature and objects
-                                                around
-                                                me. I have a passion to colours, typography and skateboards.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-xs-12 col-sm-6 col-lg-3">
-                                        <div class="team-item">
-                                            <div class="team-image-container">
-                                                <img class="person-photo" src="img/woman-glasses.png">
-                                                <img class="person-logo" src="img/telega.png">
-                                            </div>
-                                            <span class="person-title">Bradley Hunter</span>
-                                            <p class="person-text">Based in Chicago. I love playing tennis and loud
-                                                music.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-4 col-sm-2 col-lg-3">
-                            <button class="btn-team" type="button" formmethod="get" formaction="#">See other partners
+                        <div class="col-12 col-sm-6 col-lg-3">
+                            <button class="btn" type="button" formmethod="get" formaction="#">Find your holiday
+                                partner
                             </button>
                         </div>
                     </div>
-                </section>
+                </div>
+            </div>
+        </div>
+    </header>
+</div>
+
+<div class="container team">
+    <div class="row">
+        <div class="col-12 col-sm-12 col-lg-12">
+            <h2 class="team-title">Meet a partner for your best holiday</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-sm-8 col-lg-12 d-sm-flex flex-sm-wrap d-lg-flex flex-lg-nowrap justify-content-lg-center team-items-container">
+            <div class="team-item">
+                <div class="team-image-container">
+                    <img class="person-photo" src="img/man-glasses.png">
+                    <img class="person-logo" src="img/tv.png">
+                </div>
+                <span class="person-title">Bradley Hunter</span>
+                <p class="person-text">Based in Chicago. I love playing tennis and loud
+                    music.</p>
+            </div>
+            <div class="team-item">
+                <div class="team-image-container">
+                    <img class="person-photo" src="img/Joli.png">
+                    <img class="person-logo" src="img/tea.png">
+                </div>
+                <span class="person-title">Heather Walker</span>
+                <p class="person-text">I'm a happy person that loves cats and climbing
+                    on
+                    mountains.</p>
+            </div>
+            <div class="team-item">
+                <div class="team-image-container">
+                    <img class="person-photo" src="img/man.png">
+                    <img class="person-logo" src="img/chemic.png">
+                </div>
+                <span class="person-title">Lucas Marsha</span>
+                <p class="person-text">I get my inspiration from nature and objects
+                    around
+                    me. I have a passion to colours, typography and skateboards.</p>
+            </div>
+            <div class="team-item">
+                <div class="team-image-container">
+                    <img class="person-photo" src="img/woman-glasses.png">
+                    <img class="person-logo" src="img/telega.png">
+                </div>
+                <span class="person-title">Bradley Hunter</span>
+                <p class="person-text">Based in Chicago. I love playing tennis and loud
+                    music.</p>
             </div>
         </div>
     </div>
+    <div class="row justify-content-center">
+        <div class="col-12 col-sm-4 col-lg-3">
+            <button class="btn" type="button" formmethod="get" formaction="#">See other partners
+            </button>
+        </div>
+    </div>
 </div>
+
 </body>
 </html>
