--- a/homework-09/index.html
+++ b/homework-09/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 <div class="container-fluid">
-    <header class="header d-md-flex flex-md-wrap">
-        <div class="row order-1 order-sm-1 col-12 col-sm-11 col-md-11 col-lg-11 justify-content-sm-between">
+    <header class="header d-flex flex-column-reverse d-md-flex flex-md-wrap d-sm-flex flex-sm-column flex-lg-nowrap">
+        <div class="row order-1 order-sm-1 col-12 col-sm-12 col-md-11 col-lg-11 justify-content-sm-between">
             <span class="logo order-2 order-sm-1 order-md-1 col-sm-3">URLAUBSGLÜCK</span>
             <div class="col-12 col-sm-4 col-lg-3 order-1  order-sm-2 order-lg-2">
                 <nav>
